# cockroach

./: go.mod  go.sum  package-lock.json
pkg/: BUILD.bazel
pkg/ccl/serverccl/diagnosticsccl/: reporter_test.go
pkg/ccl/workloadccl/allccl/: BUILD.bazel  all.go
pkg/cli/: BUILD.bazel  cli.go
pkg/cmd/roachtest/tests/: BUILD.bazel  mixed_version_status_server.go  registry.go  status_server.go
pkg/kv/kvpb/: api.proto
pkg/kv/kvserver/: BUILD.bazel  client_merge_test.go  client_raft_test.go  replica.go  replica_init.go  replica_proposal.go  replica_rankings.go  replica_send.go  replica_test.go  split_queue.go  store.go  store_pool_test.go  store_raft_test.go  store_test.go  stores_test.go
pkg/kv/kvserver/asim/state/: split_decider.go
pkg/kv/kvserver/asim/storerebalancer/: BUILD.bazel  candidate_replica.go
pkg/kv/kvserver/replicastats/: replica_stats.go
pkg/kv/kvserver/split/: decider.go  decider_test.go  load_based_splitter_test.go  replica_sampling_notifier.go  replica_sampling_notifier_test.go
pkg/kv/kvstats/: BUILD.bazel  collector.go  index_stats.go  kvstats.go  task.go
pkg/security/: certificate_manager.go  certificate_metrics.go
pkg/security/clientcert/: cert_expiry_cache.go  cert_expiry_cache_test.go
pkg/server/: BUILD.bazel  node.go  server.go
pkg/sql/: BUILD.bazel  authorization.go  authorization_test.go  backfill.go  conn_executor_exec.go  crdb_internal.go  executor_statement_metrics.go  fingerprint_cardinality_counter.go  planner.go  schema_resolver.go  testutils.go  virtual_schema.go
pkg/sql/catalog/resolver/: resolver_test.go
pkg/sql/opt/optbuilder/: builder.go  scalar.go
pkg/sql/schemachanger/scbuild/: dependencies.go
pkg/sql/schemachanger/scdeps/: build_deps.go
pkg/sql/sqlstats/: ssprovider.go
pkg/sql/sqlstats/insights/: insights.proto  registry.go
pkg/sql/sqlstats/sslocal/: sslocal_stats_collector.go
pkg/ui/: pnpm-lock.yaml
pkg/ui/workspaces/cluster-ui/src/api/: stmtInsightsApi.ts  (+1 more)
pkg/ui/workspaces/db-console/src/: app.tsx
pkg/workload/cli/: cli.go
pkg/workload/hotspots/: BUILD.bazel  index_randomint.go  index_serial.go  insert_bigint.go  unrestricted_uuid.go  util.go
pkg/workload/sqli/: BUILD.bazel  sqli.go
(+9 files in other folders)
