load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "hotspots",
    srcs = ["index_serial.go", "util.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/workload/hotspots",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util/syncutil",
        "//pkg/util/timeutil",
        "//pkg/workload",
        "//pkg/workload/histogram",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_spf13_pflag//:pflag",
        "@org_golang_x_exp//rand",
    ],
)

